Re-organized files + Added README.md

--- a/src/popup.html
+++ b/src/popup.html
@@ -9,6 +9,6 @@
         <input type="checkbox" id="toggleSwitch" />
         <label class="toggle-label" for="toggleSwitch"></label>
         
-        <script src="popup.js"></script>
+        <script src="./js/popup.js"></script>
     </body>
 </html>
