Updated icon & styles

--- a/src/popup.html
+++ b/src/popup.html
@@ -4,11 +4,15 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <b>YouTube Shuffle Extension</b>
-        <span class="label-text">Enable Shuffle</span>
-        <input type="checkbox" id="toggleSwitch" />
-        <label class="toggle-label" for="toggleSwitch"></label>
-        
+        <div class="popup-container">
+            <div class="header">
+                <img src="shuffle.png" alt="Shuffle Icon" class="shuffle-icon" />
+                <b>YouTube Shuffle Extension</b>
+            </div>
+            <input type="checkbox" id="toggleSwitch" />
+            <label class="toggle-label" for="toggleSwitch"></label>
+            <span class="label-text">Enable Shuffle</span>
+        </div>
         <script src="./js/popup.js"></script>
     </body>
 </html>
