--- a/src/popup.html
+++ b/src/popup.html
@@ -11,8 +11,9 @@
             </div>
             <input type="checkbox" id="toggleSwitch" />
             <label class="toggle-label" for="toggleSwitch"></label>
-            <span class="label-text">Enable Shuffle</span>
+            <span class="label-text">Enable Custom Shuffle</span>
         </div>
+        <div class="author">Made by simas123.05</div>
         <script src="./js/popup.js"></script>
     </body>
 </html>
