Cleaned up code

--- a/src/popup.html
+++ b/src/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -13,7 +14,7 @@
             <label class="toggle-label" for="toggleSwitch"></label>
             <span class="label-text">Enable Custom Shuffle</span>
         </div>
-        <div class="author">Made by simas123.05</div>
+        <div class="author">Made by xSimas with 💜</div>
         <script src="./js/popup.js"></script>
     </body>
 </html>
